[tool.poetry]
name = "gen-tools"
version = "0.1.0"
description = "Environment description for EFM32 MCU Rust PAC/HAL generation helper tool"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
toml = "~0.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-adjustable-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.6"
flake8-annotations = "^3.0.0"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.7"
flake8-simplify = "^0.19.3"
flake8-scream = "^0.1.0"
pep8-naming = "^0.13.3"
flake8-bugbear = "^23.2.13"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
flake8-global-variables = {git = "https://github.com/i02sopop/flake8-global-variables"}
flake8-grug = {git = "https://github.com/c0ntribut0r/flake8-grug"}
pylint = "^2.16.2"
flake8-pylint = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
